--- a/TWON/TWON/View/Pages/GamePage.xaml
+++ b/TWON/TWON/View/Pages/GamePage.xaml
@@ -10,6 +10,7 @@
 			<Button Text="←" AbsoluteLayout.LayoutBounds="20, 20, 38, 38" Clicked="BackButton_Clicked"/>
 
 			<Label x:Name="TimeLabel" Text="0:00:00" AbsoluteLayout.LayoutBounds="540, 20, 60, 20"/>
+			<Label x:Name="ScoreLabel" Text="0" AbsoluteLayout.LayoutBounds="480, 20, 60, 20" />
 
 			<Grid x:Name="GameGrid" BackgroundColor="#a56729" Padding="5" AbsoluteLayout.LayoutBounds="280, 270, 228, 228">
 				<Grid.RowDefinitions>
