--- a/TWON/TWON/View/Pages/GamePage.xaml
+++ b/TWON/TWON/View/Pages/GamePage.xaml
@@ -12,6 +12,9 @@
 			<Label x:Name="TimeLabel" Text="0:00:00" AbsoluteLayout.LayoutBounds="540, 20, 60, 20"/>
 			<Label x:Name="ScoreLabel" Text="0" AbsoluteLayout.LayoutBounds="480, 20, 60, 20" />
 
+			
+			<Button x:Name="Highestscores" Text="BestSCores" AbsoluteLayout.LayoutBounds="340, 100, 100, 100"  Clicked="Highestscores_Clicked"/>
+			<Button x:Name="pause" Text="Pause" AbsoluteLayout.LayoutBounds="60, 60, 400, 400"  Clicked="pause_Clicked"/>
 			<Grid x:Name="GameGrid" BackgroundColor="#a56729" Padding="5" AbsoluteLayout.LayoutBounds="280, 270, 228, 228">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="50"/>
