--- a/TWON/TWON/View/Pages/GamePage.xaml
+++ b/TWON/TWON/View/Pages/GamePage.xaml
@@ -7,39 +7,26 @@
 		<AbsoluteLayout >
 			<!-- AspectFill: https://stackoverflow.com/questions/41395248/xamarin-forms-image-fill-width-with-proper-aspect#41395453 -->
 			<Image Source="" Aspect="AspectFill"/>
-			
-			<Button Text="←" AbsoluteLayout.LayoutBounds="20, 20, 38, 38" Clicked="BackButton_Clicked"/>
 
-			<Label x:Name="TimeLabel" Text="0:00:00" AbsoluteLayout.LayoutBounds="540, 20, 60, 20"/>
-			<Label x:Name="ScoreLabel" Text="0" AbsoluteLayout.LayoutBounds="480, 20, 60, 20" />
+			<Button Text="←" AbsoluteLayout.LayoutBounds="20, 20, 38, 38" Clicked="BackButton_Clicked" TextColor="White"/>
 
-			
-			<Button x:Name="Highestscores" Text="BestSCores" AbsoluteLayout.LayoutBounds="340, 100, 100, 100"  Clicked="Highestscores_Clicked"/>
-
-			<Button x:Name="pause" Text="Pause" AbsoluteLayout.LayoutBounds="60, 60, 60, 60"  Clicked="pause_Clicked"/>
-			<Grid x:Name="GameGrid" BackgroundColor="DimGray"  Padding="5" AbsoluteLayout.LayoutBounds="280, 270, 228, 228">
-				<Grid.RowDefinitions>
-					<RowDefinition Height="50"/>
-					<RowDefinition Height="50"/>
-					<RowDefinition Height="50"/>
-					<RowDefinition Height="50"/>
-				</Grid.RowDefinitions>
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition Width="50" />
-					<ColumnDefinition Width="50" />
-					<ColumnDefinition Width="50" />
-					<ColumnDefinition Width="50" />
-				</Grid.ColumnDefinitions>
+			<StackLayout AbsoluteLayout.LayoutBounds="0.8, 20" Orientation="Horizontal" VerticalOptions="CenterAndExpand" AbsoluteLayout.LayoutFlags="XProportional">
+				<Button x:Name="Highestscores" Text="Best Scores" TextColor="White" Clicked="Highestscores_Clicked"/>
+				<Button x:Name="pause" Text="Pause" TextColor="White" Clicked="pause_Clicked"/>
+				<Label x:Name="TimeLabel" Text="0:00:00" TextColor="White"/>
+				<Label x:Name="ScoreLabel" Text="0" TextColor="White"/>
+			</StackLayout>
+			<Grid x:Name="GameGrid" BackgroundColor="DimGray" Padding="5" AbsoluteLayout.LayoutBounds="0.5, 0.6" AbsoluteLayout.LayoutFlags="PositionProportional">
 
 			</Grid>
 
-			<StackLayout HorizontalOptions="Center" AbsoluteLayout.LayoutBounds="540, 300, 200, 200">
-				<Button Text="▲" Clicked="MoveUp" />
+			<StackLayout HorizontalOptions="Center" AbsoluteLayout.LayoutBounds="640, 300, 200, 200">
+				<Button Text="▲" Clicked="MoveUp" TextColor="White" />
 				<StackLayout Orientation="Horizontal">
-					<Button Text="◀" Clicked="MoveLeft" />
-					<Button Text="▶" Clicked="MoveRight" />
+					<Button Text="◀" Clicked="MoveLeft" TextColor="White" />
+					<Button Text="▶" Clicked="MoveRight" TextColor="White" />
 				</StackLayout>
-				<Button Text="▼" Clicked="MoveDown" />
+				<Button Text="▼" Clicked="MoveDown" TextColor="White" />
 			</StackLayout>
 		</AbsoluteLayout>
     </ContentPage.Content>
