--- a/TWON/TWON/View/Pages/DifficultyScreen.xaml
+++ b/TWON/TWON/View/Pages/DifficultyScreen.xaml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="TWON.View.Pages.DifficultyScreen">
+             x:Class="TWON.View.Pages.DifficultyScreen"
+			 BackgroundImage="line.jpg">
 	<ContentPage.Content>
 		<ScrollView>
 			<Grid ColumnSpacing="0" RowSpacing="0">
