--- a/TWON/TWON/View/Pages/GamePage.xaml
+++ b/TWON/TWON/View/Pages/GamePage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TWON.View.Pages.GamePage"
-			 BackgroundImage="blueprint.jpg">
+			 BackgroundImage="lines.jpg">
     <ContentPage.Content>
 		<AbsoluteLayout >
 			<!-- AspectFill: https://stackoverflow.com/questions/41395248/xamarin-forms-image-fill-width-with-proper-aspect#41395453 -->
@@ -14,9 +14,10 @@
 			<Label x:Name="ScoreLabel" Text="0" AbsoluteLayout.LayoutBounds="480, 20, 60, 20" />
 
 			
-			<Button x:Name="Highestscores" Text="BestSCores" AbsoluteLayout.LayoutBounds="340, 100, 100, 100"  Clicked="Highestscores_Clicked"/>
+			<Button x:Name="Highestscores" Text="BestSCores" FontAttributes="Bold" AbsoluteLayout.LayoutBounds="340, 100, 100, 100"  Clicked="Highestscores_Clicked"/>
 
-			<Button x:Name="pause" Text="Pause" AbsoluteLayout.LayoutBounds="60, 60, 60, 60"  Clicked="pause_Clicked"/>
+			<Button x:Name="pause" Text="Pause" FontAttributes="Bold" AbsoluteLayout.LayoutBounds="60, 60, 60, 60"  Clicked="pause_Clicked"/>
+			<Entry x:Name="Name" Text="Enter your name here" FontAttributes="Bold" AbsoluteLayout.LayoutBounds="90, 90, 90, 90"/>
 			<Grid x:Name="GameGrid" BackgroundColor="DimGray"  Padding="5" AbsoluteLayout.LayoutBounds="280, 270, 228, 228">
 				<Grid.RowDefinitions>
 					<RowDefinition Height="50"/>
