--- a/TWON/TWON/View/Pages/DifficultyScreen.xaml
+++ b/TWON/TWON/View/Pages/DifficultyScreen.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TWON.View.Pages.DifficultyScreen"
-			 BackgroundImage="line.jpg">
+			 BackgroundImage="blueprint.jpg">
 	<ContentPage.Content>
 		<ScrollView>
 			<Grid ColumnSpacing="0" RowSpacing="0">
